# ActividadM3.3

./: README.md
puzzlebot_description/urdf/: base.xacro  wheels.xacro
puzzlebot_gazebo/scripts/: widen_maze.py
puzzlebot_navigation2/config/: nav2_params.yaml
puzzlebot_navigation2/scripts/: set_initial_pose.py
puzzlebot_ros2/: README.md
puzzlebot_ros2/puzzlebot_description/: CMakeLists.txt  README.md  package.xml
puzzlebot_ros2/puzzlebot_description/launch/: puzzlebot_description.launch.py
puzzlebot_ros2/puzzlebot_description/rviz/: puzzlebot_description.rviz
puzzlebot_ros2/puzzlebot_description/urdf/: puzzlebot.urdf.xacro
puzzlebot_ros2/puzzlebot_gazebo/: CMakeLists.txt  README.md  package.xml
puzzlebot_ros2/puzzlebot_gazebo/config/: gazebo_bridge.yaml
puzzlebot_ros2/puzzlebot_gazebo/launch/: puzzlebot_gazebo.launch.py
puzzlebot_ros2/puzzlebot_gazebo/worlds/: maze_world.world
puzzlebot_ros2/puzzlebot_navigation2/: CMakeLists.txt  README.md  package.xml
puzzlebot_ros2/puzzlebot_navigation2/config/: nav2_params.yaml  slam_toolbox.yaml
puzzlebot_ros2/puzzlebot_navigation2/launch/: nav2.launch.py  slam.launch.py
puzzlebot_ros2/puzzlebot_navigation2/maps/: map_maze.pgm  map_maze.yaml
puzzlebot_ros2/puzzlebot_navigation2/rviz/: nav2.rviz  slam.rviz
puzzlebot_ros2/puzzlebot_navigation2/scripts/: send_goal.py
